Fix spacing issues in footer at smaller viewports

--- a/src/Scss/partials/_page-footer.scss
+++ b/src/Scss/partials/_page-footer.scss
@@ -2,6 +2,7 @@
 .site-footer {
     grid-row: 3 / 4;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     width: 100%;
@@ -10,9 +11,11 @@
     border-top: 3px solid var(--site-footer-border, $site-footer-border-default);
     font-size: 16px;
     padding: 5px 1.25em;
+    margin-top: 60px;
 
     @include bp(medium1) {
         padding: 0 2.5em;
+        margin-top: 120px;
     }
 }
 
